@@ -7,6 +7,11 @@ UNREALEASED
     * FEATURE: add index.deleteObjects()
     * FIX: waitTask failure case when using promises, was not going through
     * FEATURE: add index.deleteByQuery()
+    * FEATURE (Node.js): add client.enableRateLimitForward()
+    * FEATURE (Node.js): add client.disableRateLimitForward()
+    * FEATURE (Node.js): add client.useSecuredAPIKey()
+    * FEATURE (Node.js): add client.disableSecuredAPIKey()
+
 
 2015-10-04  3.0.7
     * MIGRATION: throw on V2 .search() usage:
